Add PUT and (dummy) DELETE for dungeon rooms.
Replaces reset.
